# CPP1_Aufgaben

Aufgaben_10/: CMakeLists.txt  main.cpp
Aufgaben_11/: main.cpp
Aufgaben_12/: main.cpp
Aufgaben_2/: CMakeLists.txt  main.cpp
Aufgaben_3/: main.cpp
Aufgaben_4/: main.cpp
Aufgaben_5/: CMakeLists.txt  main_Array.cpp  main_Rechner.cpp
Aufgaben_6/: CMakeLists.txt  Zahlenraten.cpp  Zeichenketten.cpp
Aufgaben_7/: main.cpp
Aufgaben_8/: main.cpp
Aufgaben_9/: main.cpp
Uebungen_1/: main.cpp
Uebungen_10/: main.cpp
Uebungen_11/: main.cpp
Uebungen_12/: main.cpp
Uebungen_13/: CMakeLists.txt  main.cpp  text.txt
Uebungen_4/: main.cpp
Uebungen_5/: main.cpp
Uebungen_6/: main.cpp
Uebungen_7/: main.cpp
Uebungen_8/: CMakeLists.txt  main.cpp
Uebungen_9/: main.cpp
